--- a/mlp.ipynb
+++ b/mlp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,30 +177,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "ml = MLP(4)\n",
-    "ml.add(20, 'sigmoid')\n",
-    "ml.add(30, 'sigmoid')\n",
-    "ml.add(20, 'relu')\n",
+    "ml.add(5, 'sigmoid')\n",
     "ml.add(3, 'sigmoid')\n",
     "\n",
-    "opt = Optimizer(ml, SoftmaxCE())\n",
-    "m1 = ml.layers[2].mat.copy()"
+    "opt = Optimizer(ml, SoftmaxCE())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ctrs = [0.01, 0.01, 0.005]\n",
+    "ctrs = [0.1, 0.05]\n",
     "for c in ctrs:\n",
     "    opt.ctr = c\n",
-    "    for epc in range(10000):\n",
+    "    for epc in range(5000):\n",
     "        for x,y in zip(X_train, Y_train):\n",
     "            x = x.reshape((-1,1))\n",
     "            y = y.reshape((-1,1))\n",
@@ -209,34 +206,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "92.51368889753266\n"
-     ]
-    }
-   ],
-   "source": [
-    "m2 = ml.layers[2].mat\n",
-    "print(np.abs(m2-m1).sum())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.69"
+       "0.92"
       ]
      },
-     "execution_count": 239,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
