--- a/dnn.ipynb
+++ b/dnn.ipynb
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +329,7 @@
     "        return self.rate*M/(np.sqrt(V)+self.eps)\n",
     "        \n",
     "    def _calc_update_gradient(self, idx, local_grad):\n",
-    "        if idx not in self.h:\n",
+    "        if idx not in self.m:\n",
     "            self.m[idx] = local_grad.applied(np.zeros_like)\n",
     "            self.v[idx] = local_grad.applied(np.zeros_like)\n",
     "        self.m[idx].apply_arg(lambda prev, new: self.b1*prev+(1-self.b1)*new, local_grad)\n",
@@ -353,16 +353,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.4645503118529852"
+       "0.544140129801541"
       ]
      },
-     "execution_count": 213,
+     "execution_count": 229,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,20 +376,20 @@
     "model.add(SoftmaxLayer())\n",
     "\n",
     "ce = CrossEntropyLoss()\n",
-    "opt = RMSPropOptimizer(0.01, 0.8)\n",
+    "opt = AdamOptimizer(0.01)\n",
     "opt.loss(model, X0, Y0, ce)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.015345795364334886\n"
+      "0.019935706055922105\n"
      ]
     }
    ],
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
        "0.98"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 236,
      "metadata": {},
      "output_type": "execute_result"
     }
