--- a/dnn.ipynb
+++ b/dnn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,24 +88,6 @@
     "        self.W -= u_grads[0]\n",
     "        self.B -= u_grads[1]\n",
     "\n",
-    "class DropOutlayer:\n",
-    "    def __init__(self, rate):\n",
-    "        self.rate = rate\n",
-    "    \n",
-    "    def clear_temp(self):\n",
-    "        self.pFilter = None\n",
-    "    \n",
-    "    def forward(self, X):\n",
-    "        return X\n",
-    "    \n",
-    "    def save_forward(self, X):\n",
-    "        filt = np.random.binomial(1, self.rate, X.shape)\n",
-    "        self.pFilter = filt\n",
-    "        return filt*X\n",
-    "    \n",
-    "    def backward(self, grad):\n",
-    "        return self.pFilter*grad\n",
-    "\n",
     "class SigmoidLayer:\n",
     "    def __init__(self):\n",
     "        self.pY = None\n",
@@ -152,7 +134,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DropOutlayer:\n",
+    "    def __init__(self, rate):\n",
+    "        self.rate = rate\n",
+    "    \n",
+    "    def clear_temp(self):\n",
+    "        self.pFilter = None\n",
+    "    \n",
+    "    def forward(self, X):\n",
+    "        return X\n",
+    "    \n",
+    "    def save_forward(self, X):\n",
+    "        filt = np.random.binomial(1, self.rate, X.shape)\n",
+    "        self.pFilter = filt\n",
+    "        return filt*X\n",
+    "    \n",
+    "    def backward(self, grad):\n",
+    "        return self.pFilter*grad\n",
+    "\n",
+    "class NormalizeLayer:\n",
+    "    def __init__(self, epsi=1e-4):\n",
+    "        self.eps = epsi\n",
+    "    \n",
+    "    def forward(self, X):\n",
+    "        return (X-np.mean(X, axis=1, keepdims=True))/np.sqrt(np.var(X, axis=1, keepdims=True)+self.eps)\n",
+    "    \n",
+    "    def save_forward(self, X):\n",
+    "        mean = np.mean(X, axis=1, keepdims=True)\n",
+    "        std = np.sqrt(np.var(X, axis=1, keepdims=True)+self.eps)\n",
+    "        bias = X-mean\n",
+    "        self.pB = ((mean-1)/std*2*(bias)-1)/X.shape[1]\n",
+    "        self.pStd = std\n",
+    "        return bias/std\n",
+    "    \n",
+    "    def backward(self, grad):\n",
+    "        Y = self.pB\n",
+    "        gY = (Y[:, np.newaxis]+np.eye(Y.shape[1])[np.newaxis])/self.pStd[:,np.newaxis]\n",
+    "        return np.matmul(grad[:, np.newaxis], gY).squeeze()\n",
+    "\n",
+    "class SimpleTransformLayer:\n",
+    "    def __init__(self):\n",
+    "        self.gamma = 1\n",
+    "        self.beta = 0\n",
+    "    \n",
+    "    def forward(self, X):\n",
+    "        return X*self.gamma + self.beta\n",
+    "    \n",
+    "    def save_forward(self, X):\n",
+    "        self.pX = X\n",
+    "        return X*self.gamma + self.beta\n",
+    "    \n",
+    "    def backward(self, grad):        \n",
+    "        return Gradients([np.array([np.sum(grad*self.pX), np.sum(grad)])]), np.full_like(self.pX, self.gamma)*grad\n",
+    "    \n",
+    "    def update(self, u_grads):\n",
+    "        self.gamma -= u_grads[0][0]\n",
+    "        self.beta -= u_grads[0][1]\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,16 +400,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.544140129801541"
+       "0.4758422988003253"
       ]
      },
-     "execution_count": 229,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,39 +417,42 @@
    "source": [
     "model = DNN()\n",
     "model.add(AffineLayer(4, 5))\n",
+    "model.add(NormalizeLayer())\n",
+    "model.add(SimpleTransformLayer())\n",
     "model.add(SigmoidLayer())\n",
     "model.add(DropOutlayer(0.8))\n",
     "model.add(AffineLayer(5, 3))\n",
     "model.add(SoftmaxLayer())\n",
     "\n",
     "ce = CrossEntropyLoss()\n",
-    "opt = AdamOptimizer(0.01)\n",
+    "opt = AdamOptimizer(0.001)\n",
     "opt.loss(model, X0, Y0, ce)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.019935706055922105\n"
+      "0.07232479733570076\n"
      ]
     }
    ],
    "source": [
+    "loss0 = opt.loss(model, X0, Y0, ce)\n",
     "for it in range(5000):\n",
     "    _, last_loss = opt.fit(model, X0, Y0, ce)\n",
     "    \n",
-    "print(last_loss)"
+    "print(loss0-last_loss)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +461,7 @@
        "0.98"
       ]
      },
-     "execution_count": 236,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
