add relu, normalize

--- a/dnn.ipynb
+++ b/dnn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,6 +107,20 @@
     "    def backward(self, grad):\n",
     "        return self.pY*(1-self.pY)*grad\n",
     "\n",
+    "class ReluLayer:\n",
+    "    def clear_temp(self):\n",
+    "        self.pM = None\n",
+    "    \n",
+    "    def forward(self, X):\n",
+    "        return np.maximum(X, 0)\n",
+    "    \n",
+    "    def save_forward(self, X):\n",
+    "        self.pM = (X > 0).astype(int)\n",
+    "        return self.forward(X)\n",
+    "    \n",
+    "    def backward(self, grad):\n",
+    "        return grad*self.pM\n",
+    "\n",
     "class SoftmaxLayer:\n",
     "    def __init__(self):\n",
     "        self.pY = None\n",
@@ -134,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,6 +173,10 @@
     "class NormalizeLayer:\n",
     "    def __init__(self, epsi=1e-4):\n",
     "        self.eps = epsi\n",
+    "    \n",
+    "    def clear_temp(self):\n",
+    "        self.pB = None\n",
+    "        self.pStd = None\n",
     "    \n",
     "    def forward(self, X):\n",
     "        return (X-np.mean(X, axis=1, keepdims=True))/np.sqrt(np.var(X, axis=1, keepdims=True)+self.eps)\n",
@@ -199,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,16 +418,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.4758422988003253"
+       "1.7465845408839078"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +437,7 @@
     "model.add(AffineLayer(4, 5))\n",
     "model.add(NormalizeLayer())\n",
     "model.add(SimpleTransformLayer())\n",
-    "model.add(SigmoidLayer())\n",
+    "model.add(ReluLayer())\n",
     "model.add(DropOutlayer(0.8))\n",
     "model.add(AffineLayer(5, 3))\n",
     "model.add(SoftmaxLayer())\n",
@@ -431,14 +449,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.07232479733570076\n"
+      "8.514767669150561e-05\n"
      ]
     }
    ],
@@ -452,16 +470,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.98"
+       "0.9733333333333334"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
